--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
-        env:
+      - run: npm install
+      - run: npm start
+        env: npm test
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
